--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -31,80 +31,6 @@
   }
 }
 
-/* * {
-  border: 0;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: var(--font);
-  font-weight: var(--fontOrigin);
-  font-size: 1rem;
-  line-height: 1.2;
-  letter-spacing: 0.005rem;
-  -webkit-font-smoothing: subpixel-antialiased;
-  font-smoothing: subpixel-antialiased;
-} */
-
-/* .wrapper {
-  display: grid;
-  grid-template-columns: repeat( auto-fit, 1fr );
-  grid-template-rows: auto;
-  grid-template-areas:
-    "menu menu menu"
-    ". card .";
-  width: 100vw;
-  min-height: 100vh;
-  padding-top: 40px;
-  padding-bottom: 40px;
-}
-
-.menu {
-  grid-area: menu;
-  align-self: end;
-}
-
-.menu__list {
-  text-align: center;
-}
-
-.menu__item {
-  position: relative;
-  display: inline-block;
-  padding: 10px 20px;
-  font-size: var(--fontMedium);
-  font-weight: var(--fontRegular);
-  text-transform: uppercase;
-  color: #a9a9a9;
-  cursor: pointer;
-  -webkit-transition: all var(--speed) ease;
-  transition: all var(--speed) ease;
-}
-
-.menu__item::after {
-  content: "";
-  display: block;
-  width: 0;
-  height: 2px;
-  margin-top: 6px;
-  background: rgba(100, 100, 250, 1);
-  -webkit-transition: all var(--speed) ease;
-  transition: all var(--speed) ease;
-}
-
-.menu__item:hover {
-  color: rgba(150, 150, 255, 1);
-}
-.menu__item.active {
-  color: rgba(100, 100, 250, 1);
-}
-
-.menu__item.active::after {
-  width: 100%;
-} */
-
 .card {
   position: relative;
   grid-area: card;
@@ -113,7 +39,6 @@ body {
   overflow: hidden;
   display: inline-block;
   width: calc(50% - 40px);
-  /* max-width: 250px; */
   height: 250px;
   margin: 10px 20px;
   font-size: var(--fontOrigin);
@@ -198,7 +123,6 @@ body {
   height: 100%;
   pointer-events: none;
   opacity: 0.6;
-  /* background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5)); */
 }
 
 .card:hover .card__image {
@@ -395,4 +319,21 @@ body {
   -webkit-filter: grayscale(50%) contrast(80%) brightness(1.6);
   filter: grayscale(50%) contrast(80%) brightness(1.6);
   mix-blend-mode: normal;
+}
+
+.library-icon {
+  max-width: 50px;
+  max-height: 50px;
+}
+
+@media screen and (max-width: 480px) {
+  .card {
+    width: calc(100% - 40px);
+  }
+
+  .library-icon {
+    margin: 0px -4px;
+    -webkit-transform: scale(0.8);
+    transform: scale(0.8);
+  }
 }
