--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1087,102 +1087,102 @@ table.alt tfoot {
 
 /* Button */
 
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	.button {
-		-moz-appearance: none;
-		-webkit-appearance: none;
-		-ms-appearance: none;
-		appearance: none;
-		-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		background-color: transparent;
-		border-radius: 4px;
-		border: 0;
-		box-shadow: inset 0 0 0 1px #ffffff;
-		color: #ffffff !important;
-		cursor: pointer;
-		display: inline-block;
-		font-size: 0.8rem;
-		font-weight: 300;
-		height: 2.75rem;
-		letter-spacing: 0.2rem;
-		line-height: 2.75rem;
-		outline: 0;
-		padding: 0 1.25rem 0 1.25rem;
-		text-align: center;
-		text-decoration: none;
-		text-transform: uppercase;
-		white-space: nowrap;
-	}
+input[type="submit"],
+input[type="reset"],
+input[type="button"],
+.button {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  -moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  background-color: transparent;
+  border-radius: 4px;
+  border: 0;
+  box-shadow: inset 0 0 0 1px #ffffff;
+  color: #ffffff !important;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 0.8rem;
+  font-weight: 300;
+  height: 2.75rem;
+  letter-spacing: 0.2rem;
+  line-height: 2.75rem;
+  outline: 0;
+  padding: 0 1.25rem 0 1.25rem;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  white-space: nowrap;
+}
 
-		input[type="submit"]:hover,
-		input[type="reset"]:hover,
-		input[type="button"]:hover,
-		.button:hover {
-			background-color: rgba(255, 255, 255, 0.075);
-		}
+input[type="submit"]:hover,
+input[type="reset"]:hover,
+input[type="button"]:hover,
+.button:hover {
+  background-color: rgba(255, 255, 255, 0.075);
+}
 
-		input[type="submit"]:active,
-		input[type="reset"]:active,
-		input[type="button"]:active,
-		.button:active {
-			background-color: rgba(255, 255, 255, 0.175);
-		}
+input[type="submit"]:active,
+input[type="reset"]:active,
+input[type="button"]:active,
+.button:active {
+  background-color: rgba(255, 255, 255, 0.175);
+}
 
-		input[type="submit"].icon:before,
-		input[type="reset"].icon:before,
-		input[type="button"].icon:before,
-		.button.icon:before {
-			margin-right: 0.5em;
-		}
+input[type="submit"].icon:before,
+input[type="reset"].icon:before,
+input[type="button"].icon:before,
+.button.icon:before {
+  margin-right: 0.5em;
+}
 
-		input[type="submit"].fit,
-		input[type="reset"].fit,
-		input[type="button"].fit,
-		.button.fit {
-			width: 100%;
-		}
+input[type="submit"].fit,
+input[type="reset"].fit,
+input[type="button"].fit,
+.button.fit {
+  width: 100%;
+}
 
-		input[type="submit"].small,
-		input[type="reset"].small,
-		input[type="button"].small,
-		.button.small {
-			font-size: 0.6rem;
-			height: 2.0625rem;
-			line-height: 2.0625rem;
-		}
+input[type="submit"].small,
+input[type="reset"].small,
+input[type="button"].small,
+.button.small {
+  font-size: 0.6rem;
+  height: 2.0625rem;
+  line-height: 2.0625rem;
+}
 
-		input[type="submit"].primary,
-		input[type="reset"].primary,
-		input[type="button"].primary,
-		.button.primary {
-			background-color: #ffffff;
-			color: #1b1f22 !important;
-			font-weight: 600;
-		}
+input[type="submit"].primary,
+input[type="reset"].primary,
+input[type="button"].primary,
+.button.primary {
+  background-color: #ffffff;
+  color: #1b1f22 !important;
+  font-weight: 600;
+}
 
-		input[type="submit"].disabled, input[type="submit"]:disabled,
-		input[type="reset"].disabled,
-		input[type="reset"]:disabled,
-		input[type="button"].disabled,
-		input[type="button"]:disabled,
-		.button.disabled,
-		.button:disabled {
-			pointer-events: none;
-			cursor: default;
-			opacity: 0.25;
-		}
+input[type="submit"].disabled,
+input[type="submit"]:disabled,
+input[type="reset"].disabled,
+input[type="reset"]:disabled,
+input[type="button"].disabled,
+input[type="button"]:disabled,
+.button.disabled,
+.button:disabled {
+  pointer-events: none;
+  cursor: default;
+  opacity: 0.25;
+}
 
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	{
-		line-height: calc(2.75rem - 2px);
-	}
+input[type="submit"],
+input[type="reset"],
+input[type="button"] {
+  line-height: calc(2.75rem - 2px);
+}
 
 /* BG */
 
@@ -1212,10 +1212,10 @@ table.alt tfoot {
 }
 
 #bg:before {
-  -moz-transition: background-color 2.5s ease-in-out;
-  -webkit-transition: background-color 2.5s ease-in-out;
-  -ms-transition: background-color 2.5s ease-in-out;
-  transition: background-color 2.5s ease-in-out;
+  -moz-transition: background-color 5.5s ease-in-out;
+  -webkit-transition: background-color 5.5s ease-in-out;
+  -ms-transition: background-color 5.5s ease-in-out;
+  transition: background-color 5.5s ease-in-out;
   -moz-transition-delay: 0.75s;
   -webkit-transition-delay: 0.75s;
   -ms-transition-delay: 0.75s;
@@ -1289,7 +1289,7 @@ body.is-preload #bg:before {
   min-height: 100vh;
   width: 100%;
   padding: 4rem 2rem;
-  z-index: 3;
+  z-index: 1000;
 }
 
 #wrapper:before {
@@ -1385,7 +1385,7 @@ header > div:before {
 }
 
 header > .content:after {
-	bottom: calc(-3.5rem - 1px);
+  bottom: calc(-3.5rem - 1px);
   -webkit-animation: 1.5s growNavLine linear forwards;
   animation: 1.5s growNavLine linear forwards;
 }
@@ -1448,7 +1448,7 @@ header > .content:after {
 
 #header .logo:hover {
   transform: scale(1.6);
-  background-color: rgba(19, 21, 25, 0.7)
+  background-color: rgba(19, 21, 25, 0.7);
 }
 
 #header .logo:hover + .content:before {
@@ -1465,8 +1465,8 @@ header > .content:after {
 }
 
 #header nav {
-	transform: translateY(0px);
-	-webkit-animation: 1.5s shiftNav linear backwards;
+  transform: translateY(0px);
+  -webkit-animation: 1.5s shiftNav linear backwards;
   animation: 1.5s shiftNav linear backwards;
 }
 
@@ -1740,7 +1740,7 @@ body.is-preload #header .content .inner {
   flex-direction: column;
   position: relative;
   max-width: 100%;
-  z-index: 3;
+  z-index: 999;
 }
 
 /* #main article {
@@ -1868,4 +1868,15 @@ body.is-article-visible #footer {
 
 body.is-preload #footer {
   opacity: 0;
+}
+
+#fog {
+  height: 100vh;
+  width: 100vw;
+  max-width: 99%;
+  min-width: 800px;
+  position: absolute;
+  bottom: 0;
+  z-index: 100;
+  opacity: 0.5;
 }
