--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1186,6 +1186,9 @@ input[type="button"] {
 
 /* BG */
 
+.background {
+  opacity: 0.6;
+}
 #bg {
   -moz-transform: scale(1);
   -webkit-transform: scale(1);
@@ -1198,6 +1201,7 @@ input[type="button"] {
   width: 100%;
   height: 100vh;
   z-index: 1;
+  opacity: 0.7;
 }
 
 #bg:before,
@@ -1870,7 +1874,7 @@ body.is-preload #footer {
   opacity: 0;
 }
 
-#fog {
+/* #fog {
   height: 100vh;
   width: 100vw;
   max-width: 99%;
@@ -1879,4 +1883,11 @@ body.is-preload #footer {
   bottom: 0;
   z-index: 100;
   opacity: 0.5;
+} */
+.background {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  z-index: 2;
 }
