--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1215,7 +1215,7 @@ input[type="button"] {
   height: 100%;
 }
 
-#bg:before {
+/* #bg:before {
   -moz-transition: background-color 5.5s ease-in-out;
   -webkit-transition: background-color 5.5s ease-in-out;
   -ms-transition: background-color 5.5s ease-in-out;
@@ -1226,17 +1226,17 @@ input[type="button"] {
   transition-delay: 0.75s;
   background-image: linear-gradient(
       to top,
-      rgba(19, 21, 25, 0.5),
-      rgba(19, 21, 25, 0.5)
+      rgba(19, 21, 25, 0.2),
+      rgba(19, 21, 25, 0.2)
     ),
     url("../../images/overlay.png");
   background-size: auto, 256px 256px;
   background-position: center, center;
   background-repeat: no-repeat, repeat;
   z-index: 2;
-}
+} */
 
-#bg:after {
+/* #bg:after {
   -moz-transform: scale(1.125);
   -webkit-transform: scale(1.125);
   -ms-transform: scale(1.125);
@@ -1249,11 +1249,12 @@ input[type="button"] {
     -ms-filter 0.325s ease-in-out;
   transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
   background-image: url("../../images/bg.jpg");
+  opacity: 0.05;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   z-index: 1;
-}
+} */
 
 body.is-article-visible #bg:after {
   -moz-transform: scale(1.0825);
@@ -1267,7 +1268,7 @@ body.is-article-visible #bg:after {
 }
 
 body.is-preload #bg:before {
-  background-color: #000000;
+  background-color: #222;
 }
 
 /* Wrapper */
